--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>Agência Marketing Local</title>
 
-    <meta http-equiv="refresh" content="0; URL='https://site.agenciamarketinglocal.com.br/>
+    <meta http-equiv="refresh" content="0; URL='https://site.agenciamarketinglocal.com.br/'"/>
 </head>
 <body>
 ...
